# cppgen.nvim

./: AGENTS.md  DETAILS.md  README.md
doc/: DETAILS.md  cppgen.nvim.txt
examples/: CMakeLists.txt  Header.h  NewOrder.h  README.md  Types.h  cppgen-example.cpp  to_json.h
lua/cppgen/: ast.lua  cmpsource.lua  cppgen.lua  generator.lua  init.lua  lsp.lua  navigator.lua  options.lua  validator.lua
lua/cppgen/generators/: cereal.lua  class.lua  enum.lua  json.lua  switch.lua  util.lua
